runs/2025-02-28-13-08-23/logs/methylInheritance/build-success.log
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://p3m.dev/cran/__linux__/noble/latest
Bioconductor version 3.20 (BiocManager 1.30.25), R 4.4.2 (2024-10-31)
Installing package(s) 'methylInheritance'
also installing the dependencies ‘fastseg’, ‘methylKit’, ‘methInheritSim’

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/fastseg_1.52.0.tar.gz'
Content type 'application/x-gzip' length 737084 bytes (719 KB)
==================================================
downloaded 719 KB

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/methylKit_1.32.0.tar.gz'
Content type 'application/x-gzip' length 1408002 bytes (1.3 MB)
==================================================
downloaded 1.3 MB

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/methInheritSim_1.28.0.tar.gz'
Content type 'application/x-gzip' length 1173031 bytes (1.1 MB)
==================================================
downloaded 1.1 MB

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/methylInheritance_1.30.0.tar.gz'
Content type 'application/x-gzip' length 1795855 bytes (1.7 MB)
==================================================
downloaded 1.7 MB

* installing *source* package ‘fastseg’ ...
** package ‘fastseg’ successfully unpacked and MD5 sums checked
** using staged installation
** libs
using C compiler: ‘gcc (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0’
using C++ compiler: ‘g++ (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0’
gcc -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c R_init_fastseg.c -o R_init_fastseg.o
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c segment.cpp -o segment.o
In file included from segment.cpp:8:
segment.cpp: In function ‘SEXPREC* segment(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP)’:
segment.cpp:43:25: error: ‘allocVector’ was not declared in this scope; did you mean ‘Rf_allocVector’?
   43 |         PROTECT(x_RET = allocVector(REALSXP, n));
      |                         ^~~~~~~~~~~
/usr/local/lib/R/include/Rinternals.h:371:36: note: in definition of macro ‘PROTECT’
  371 | #define PROTECT(s)      Rf_protect(s)
      |                                    ^
segment.cpp:292:37: error: ‘mkChar’ was not declared in this scope
  292 |         SET_STRING_ELT(namesRET, 0, mkChar("x"));
      |                                     ^~~~~~
segment.cpp:303:9: error: ‘setAttrib’ was not declared in this scope; did you mean ‘Rf_setAttrib’?
  303 |         setAttrib(RET, R_NamesSymbol, namesRET);
      |         ^~~~~~~~~
      |         Rf_setAttrib
make: *** [/usr/local/lib/R/etc/Makeconf:204: segment.o] Error 1
ERROR: compilation failed for package ‘fastseg’
* removing ‘/mnt/library/fastseg’
ERROR: dependency ‘fastseg’ is not available for package ‘methylKit’
* removing ‘/mnt/library/methylKit’
ERROR: dependency ‘methylKit’ is not available for package ‘methInheritSim’
* removing ‘/mnt/library/methInheritSim’
ERROR: dependency ‘methylKit’ is not available for package ‘methylInheritance’
* removing ‘/mnt/library/methylInheritance’

The downloaded source packages are in
	‘/tmp/RtmpwSRj8b/downloaded_packages’
Old packages: 'bslib', 'cli', 'curl', 'evaluate', 'httr2', 'jsonlite',
  'openssl', 'pillar', 'pkgbuild', 'processx', 'ps', 'purrr', 'R6', 'Rcpp',
  'rlang', 'sessioninfo', 'systemfonts', 'testthat', 'textshaping', 'tinytex',
  'xfun', 'zip', 'class', 'foreign', 'KernSmooth', 'MASS', 'Matrix', 'nlme',
  'nnet', 'rpart', 'spatial'
Warning messages:
1: In install.packages(...) :
  installation of package ‘fastseg’ had non-zero exit status
2: In install.packages(...) :
  installation of package ‘methylKit’ had non-zero exit status
3: In install.packages(...) :
  installation of package ‘methInheritSim’ had non-zero exit status
4: In install.packages(...) :
  installation of package ‘methylInheritance’ had non-zero exit status
Error: unexpected 'else' in "  else"
Execution halted

real	1m24.010s
user	0m12.250s
sys	0m5.248s
